Fixed layout and spacing

--- a/styles/mockup.css
+++ b/styles/mockup.css
@@ -12,6 +12,10 @@ body {
   --text-color: #474747;
   --dark-mode-toggle: #aff2ff;
   position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
   height: 100vh;
   margin: 0;
   background: linear-gradient(to bottom, var(--primary-bg-color) 0%, var(--primary-bg-color) 50%, var(--secondary-bg-color) 50%, var(--secondary-bg-color) 100%);
@@ -38,24 +42,27 @@ body.dark {
 /* =========================================
 "NAVIGATION"
 ========================================= */
+.nav-container {
+  display: flex;
+  justify-content: space-between;
+  align-content: center;
+  width: 100%;
+  padding: 10px 13px 0;
+}
+
 .name {
-  position: absolute;
-  top: 10px;
-  left: 14px;
   margin: 0;
   font-size: 1.13rem;
   font-weight: 600;
   letter-spacing: 0.6px;
 }
 
-.dark-mode-container {
-  position: absolute;
-  top: 16px;
-  right: 20px;
-}
-
 
 /* DARK MODE TOGGLE */
+.dark-mode-container {
+  padding: 3px 8px 0 0;
+}
+
 .checkbox {
   opacity: 0;
   position: absolute;
@@ -105,11 +112,9 @@ body.dark {
 CONVERTER
 ========================================= */
 .container {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  margin-right: -50%;
-  transform: translate(-50%, -50%);
+  min-width: 320px;
+  max-width: 320px;
+  padding: 16px 15px 0;
 }
 
 .currency {
@@ -123,7 +128,7 @@ CONVERTER
 }
 
 .select-container select {
-  width: 70px;
+  width: 60px;
   border: 0;
   color: var(--text-color);
   font-size: 22px;
@@ -131,6 +136,12 @@ CONVERTER
   -moz-appearance: none;
   -webkit-appearance: none;
   appearance: none;
+}
+
+.fa-caret-down {
+  position: absolute;
+  top: 3px;
+  right: 0;
 }
 
 .currency input {
@@ -175,7 +186,7 @@ CONVERTER
   padding: 0 10px;
   border: 2px solid var(--text-color);
   border-radius: 50px;
-  margin: 30px 15px 30px 25px;
+  margin: 30px 0 30px 25px;
   background-color: var(--ternary-bg-color);
   font-size: 18px;
 }
@@ -191,16 +202,11 @@ button:focus {
 FOOTER
 ========================================= */
 footer {
-  position: absolute;
-  bottom: 0;
-  left: 50%;
   display: flex;
   justify-content: space-around;
   align-items: center;
   width: 320px;
   padding-bottom: 15px;
-  margin-right: -50%;
-  transform: translate(-50%);
 }
 
 .icon-link {
